# ml-by-hand

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  bootstrap.sh  bpe_mini_shakespeare.npz  pyproject.toml  requirements.in  requirements.txt
.github/: pull_request_template.md
.github/workflows/: test.yml
autograd/: __init__.py  backend.py  cublaslt.py  distributed.py  functional.py  init.py  logger.py  nn.py  optim.py  tensor.py  types.py  utils.py
autograd/data/: collator.py  data_loader.py  dataset.py  sampler.py  sft.py  types.py  utils.py
autograd/distributed/: __init__.py  launch.py
autograd/text/: tokenizer.py  utils.py
autograd/tools/: callback.py  config_schema.py  data.py  metrics.py  model.py  trainer.py
docs/: autograd.rst  autograd.text.rst  conf.py  index.rst  modules.rst  requirements.in  requirements.txt
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/docs/: autograd.doctree  autograd.text.doctree  conf.doctree  modules.doctree  test.autograd.doctree  test.autograd.text.doctree  test.doctree
docs/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/docs/: autograd.html  autograd.text.html  conf.html  modules.html  test.autograd.html  test.autograd.text.html  test.html
examples/: cifar.py  gpt-1.py  gpt-2.py  gpt_2.py  grpo.py  inference_cli.py  mnist.py  movie_sentiment.py  neural_turing_machine.py  seq2seq.py  sft_gpt_2.py  transformers.py
examples/models/: resnet.py
notes/: attention_implementation_comparisons.md
test/: conftest.py  helpers.py  test_grpo.py
test/autograd/: README.md  performance_test.py  test_attention.py  test_attention_structural_causal.py  test_backend.py  test_functional.py  test_gpt2_checkpointing.py  test_nn.py  test_optim.py  test_performance.py  test_tensor.py  test_train.py  test_utils.py
test/autograd/data/: test_collator.py  test_data_loader.py  test_dataset.py  test_sampler.py  test_sft.py  test_utils.py
test/autograd/text/: test_text.txt  (+2 more)
test/distributed/: mock.py  smoke_ddp_cupy.py  smoke_ddp_nccl.py  smoke_ddp_phase3.py  test_allreduce.py  test_bf16_gate.py  test_ddp_equivalence.py  test_phase3.py  test_sampler.py
(+8 files in other folders)
