[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autograd"
version = "0.0.0"
description = "We are creating a deep learning library from scratch to demystify the inner workings of building deep learning models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "mlx; platform_system == 'Darwin'",
    "openml",  # for dataset
    "pyarrow",
    "regex",
    "scikit-learn",  # for dataset
    "tqdm",
]

[tool.setuptools.packages.find]
# Look in the current directory (the project root) and include the autograd package.
where = ["."]
include = ["autograd", "autograd.*"]

[tool.pyright]
reportIncompatibleMethodOverride = "none"
exclude = [
    ".venv",
    "build",
    "training_runs",
    "**/test/**",    # Ignore all files in the "test" directory
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"


[project.optional-dependencies]
dev = [
    "memray",
    "psutil",
    "pre-commit",
    "pyright",
    "pytest",
    "ruff",
]
